--- a/index.html
+++ b/index.html
@@ -1,86 +1,13 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>GMC Solutions | Premium Joinery & Carpentry</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; color: #333; }
-        header { background: #111; color: #fff; padding: 60px 20px; text-align: center; }
-        header h1 { margin: 0; font-size: 48px; }
-        header p { font-size: 20px; color: #ccc; }
-
-        nav { background: #222; padding: 10px; text-align: center; }
-        nav a { color: #fff; margin: 0 15px; text-decoration: none; }
-
-        section { padding: 60px 20px; max-width: 1000px; margin: auto; }
-        .services, .projects { display: flex; gap: 20px; flex-wrap: wrap; }
-        .service, .project { flex: 1 1 30%; background: #f5f5f5; padding: 20px; border-radius: 8px; }
-        .service h3, .project h3 { margin-top: 0; }
-
-        footer { background: #111; color: #fff; text-align: center; padding: 30px 20px; }
-    </style>
-</head>
-<body>
-
-<header>
-    <h1>GMC Solutions</h1>
-    <p>Exceptional Joinery & Finishing for Modern Spaces</p>
-</header>
-
-<nav>
-    <a href="#">Home</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Projects</a>
-    <a href="#">Contact</a>
-</nav>
-
-<section>
-    <h2>About Us</h2>
-    <p>At GMC Solutions, we craft premium-quality joinery with exceptional attention to detail. From custom cabinetry to luxurious kitchen islands, we bring your vision to life using wood, stone, and stainless steel finishes that speak of precision and elegance.</p>
-</section>
-
-<section>
-    <h2>Our Services</h2>
-    <div class="services">
-        <div class="service">
-            <h3>Custom Cabinetry</h3>
-            <p>High-quality cupboards, wardrobes, and kitchen cabinets tailored to your space and style.</p>
-        </div>
-        <div class="service">
-            <h3>Office & Commercial Fitouts</h3>
-            <p>From meeting rooms to end-of-trip facilities, we create sleek, functional environments.</p>
-        </div>
-        <div class="service">
-            <h3>Stone & Steel Accents</h3>
-            <p>Elegant kitchen islands and design details using stone and stainless steel elements.</p>
-        </div>
-    </div>
-</section>
-
-<section>
-    <h2>Featured Projects</h2>
-    <div class="projects">
-        <div class="project">
-            <h3>Modern Kitchen Fitout</h3>
-            <p>Custom joinery with stone island and wood cabinetry for a luxury Sydney home.</p>
-        </div>
-        <div class="project">
-            <h3>Commercial Office Joinery</h3>
-            <p>Sleek boardroom and closet fitouts with precision finishes and clever storage.</p>
-        </div>
-        <div class="project">
-            <h3>Closets & Custom Wardrobes</h3>
-            <p>Tailored storage solutions that blend perfectly with modern interior design.</p>
-        </div>
-    </div>
-</section>
-
-<footer>
-    <p>Contact us at info@gmcsolutions.com.au | Sydney, Australia</p>
-    <p>&copy; 2025 GMC Solutions</p>
-</footer>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Custom joinery, wardrobes, kitchens and commercial fitouts. Design, manufacture and installation across Greater Sydney.">
+    <title>GMC Solutions | Joinery & Fitouts in Sydney</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
