--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="assets/logo.png" alt="GMC Solutions Logo" />
+    <img src="assets/logo.jpg" alt="GMC Solutions Logo" />
     <h1>Website Under Construction</h1>
     <p>
       We’re currently refining our digital space.<br />
